# homebrew-gitig

./: .gitignore  .pre-commit.yml  AGENTS.md  LICENSE  Makefile  README.md  agent.md  gitig.py  gitig.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: new-brew.yml  release.yml  verify-brew.yml
Formula/: gitig.rb
gitig/: __init__.py  args.py  assets_runtime.py  cli.py  core.py  models.py  spinner.py
gitig/assets/: __init__.py  help.txt
gitig/assets/completions/: fish.txt  zsh.txt
scripts/: check_formula_sha.py  formula-archive-sha256.sh  generate-assets.mjs  init-homebrew-tap.sh  install-homebrew-local.sh  publish-homebrew-tap.sh  release-homebrew.sh  verify-formula-archive.rb  write-gitig-formula-sha.sh
src/completions/: bash.txt
tests/: test_formula_hook.py  test_gitig.py
